Villanova_Dev1/src/objects/SFDC_Facility__c.object
<CustomObject>
    <description>This is where you track the use of facilities for special events.</description>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity (people)</label>
        <picklist>
            <picklistValues>
                <fullName>1-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500-1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000-5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5000+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Directions_to_Facility__c</fullName>
        <label>Directions to Facility</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Facility_Address_1__c</fullName>
        <label>Address 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Address_2__c</fullName>
        <label>Address 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Fax_Number__c</fullName>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Facility_Main_Phone_Number__c</fullName>
        <label>Main Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Facility_Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_State__c</fullName>
        <label>State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Type__c</fullName>
        <label>Facility Type</label>
        <picklist>
            <picklistValues>
                <fullName>Arena</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convention Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Historic House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Movie Theatre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Museum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Night Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacant Mansion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Women&apos;s Club</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Contact_Name__c</fullName>
        <label>1st Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parking__c</fullName>
        <label>Parking</label>
        <picklist>
            <picklistValues>
                <fullName>Valet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Second_Contact_Name__c</fullName>
        <label>2nd Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Setup_Teardown_Instructions__c</fullName>
        <label>Setup or Teardown Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Third_Contact_Name__c</fullName>
        <label>3rd Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Site__c</fullName>
        <label>Web Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>X1st_Contact_Alternate_Phone__c</fullName>
        <label>1st Contact Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>X1st_Contact_Email__c</fullName>
        <label>1st Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>X1st_Contact_Fax__c</fullName>
        <label>1st Contact Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>X1st_Contact_Phone__c</fullName>
        <label>1st Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>X1st_Contact_Role__c</fullName>
        <label>1st Contact Role</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Contact_Alternate_Phone__c</fullName>
        <label>2nd Contact Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>X2nd_Contact_Email__c</fullName>
        <label>2nd Contact Email</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>X2nd_Contact_Fax__c</fullName>
        <label>2nd Contact Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>X2nd_Contact_Phone__c</fullName>
        <label>2nd Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>X2nd_Contact_Role__c</fullName>
        <label>2nd Contact Role</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Contact_Alternate_Phone__c</fullName>
        <label>3rd Contact Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>X3rd_Contact_Email__c</fullName>
        <label>3rd Contact Email</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>X3rd_Contact_Fax__c</fullName>
        <label>3rd Contact Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>X3rd_Contact_Phone__c</fullName>
        <label>3rd Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>X3rd_Contact_Role__c</fullName>
        <label>3rd Contact Role</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Facility</label>
    <listViews>
        <fullName>AllFacilities</fullName>
        <columns>NAME</columns>
        <columns>Facility_Type__c</columns>
        <columns>Facility_Main_Phone_Number__c</columns>
        <columns>Web_Site__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Facilities</label>
    </listViews>
    <nameField>
        <label>Facility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>